<resources>
    <string name="app_name">Stylyts</string>
    <string name="app_name_upper_case">STYLYTS</string>
    <string name="language">Language</string>
    <string name="language_kazakh">Қазақша</string>
    <string name="language_english">English</string>
    <string name="language_russian">Русский</string>
    <string name="fragment_login_forgot_password">Forgot password?</string>
    <string name="fragment_login_sign_in">Sign in</string>
    <string name="fragment_login_no_account">Don\'t have an account?</string>
    <string name="fragment_login_sign_up">Sign up</string>
    <string name="fragment_username">Username</string>
    <string name="fragment_registration_appbar_title">Sign up</string>
    <string name="fragment_registration_birth_date">Date of birth(месяц/день/год)</string>
    <string name="fragment_registration_term"><![CDATA[By clicking on the Complete registration button below, I agree to the terms of the Style App within <u><font color=#0D4193>Terms of Use, Terms of Payment, Privacy Policy.</font></u>]]></string>
    <string name="fragment_registration_complete">Complete registration</string>
    <string name="fragment_registration_notification_info">Style App will only send you mail as part of user notification, marketing and push notification. You can unsubscribe from receiving these letters at any time by selecting this option in your account settings.</string>
    <string name="fragment_registration_notification_info_reject_checkbox">I don\'t want to receive promotional emails from Style App.</string>
    <string name="registration_create_username_title">Create username</string>
    <string name="registration_create_username_subtitle">Create username for your new account. You can also change it later</string>
    <string name="registration_passwords_not_match">Password mismatch</string>
    <string name="registration_fill_empty_fields">Fill empty fields</string>
    <string name="registration_success">Success</string>
    <string name="registration_fill_field">Please, fill field</string>
    <string name="registration_username_is_already_exists">Username is already exists!</string>
    <string name="fragment_restore_password_forgot_password_title">Forgot password?</string>
    <string name="fragment_restore_password_forgot_password_description">Please enter your Email address and we will immediately send your password to your email.</string>
    <string name="fragment_restore_password_forgot_password_send_password_button">Send password</string>
    <string name="fragment_restore_password_refresh_password_title">Refresh password</string>
    <string name="fragment_restore_password_refresh_password_description">Please create your new password</string>
    <string name="fragment_restore_password_refresh_password_refresh_password_button">Refresh password</string>
    <string name="fragment_restore_password_success_refreshed_title">Hello %1$s!</string>
    <string name="fragment_restore_password_success_refreshed_description">Your password has been successfully updated!</string>
    <string name="fragment_restore_password_success_refreshed_next_button">Return to app</string>
    <string name="comment_text_with_user_text_format"><![CDATA[<b>%1$s %2$s</b> %3$s]]></string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat password</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="locality">Locality</string>
    <string name="street">Sreet</string>
    <string name="house">House</string>
    <string name="apartment">Apartment</string>
    <string name="post_index">Postcode</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="other_delivery_data">Подъезд, этаж, домофон и дургие данные, которые помогут курьеру быстрее найти ваше местоположение</string>
    <string name="bottom_nav_bar_main">Main</string>
    <string name="bottom_nav_bar_collection">Outfits</string>
    <string name="bottom_nav_bar_create_collection">Create</string>
    <string name="bottom_nav_bar_shop">Search</string>
    <string name="bottom_nav_bar_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="full_name_text_format">%s %s</string>
    <string name="filter_list_filter">Filter</string>
    <string name="filter_list_photo_outfits">Outfits</string>
    <string name="filter_list_all_positions">All positions</string>
    <string name="filter_list_publishes">Publications</string>
    <string name="filter_list_wardrobe">Wardrobe</string>
    <string name="filter_list_my_data">My data</string>
    <string name="filter_my_wardrobe">My wardrobe</string>
    <string name="filter_discounts">Discounts</string>
    <string name="filter_favorite_brands">любимые бренды</string>
    <string name="toolbar_title_edit_profile">Edit profile</string>
    <string name="toolbar_title_comments">Comments</string>
    <string name="toolbar_cancel">Cancel</string>
    <string name="toolbar_completed">Done</string>
    <string name="cancel">Cancel</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="add_in_basket">Add to Shopping Cart</string>
    <string name="share">Share</string>
    <string name="create_outfit_with_item">Create an outfit with this thing</string>
    <string name="item_description">Product description</string>
    <string name="delivery_info">Information about delivery</string>
    <string name="albums">Albums</string>
    <string name="followers">followers</string>
    <string name="photo">Photo</string>
    <string name="publications">Publications</string>
    <string name="following">following</string>
    <string name="follow">follow</string>
    <string name="unfollow">unfollow</string>
    <string name="already_followed">Followed</string>
    <string name="write_message">Write</string>
    <string name="search">Search</string>
    <string name="for_his">For his</string>
    <string name="for_her">For her</string>
    <string name="month_year">Month/Year</string>
    <string name="name_surname">Name Surname</string>
    <string name="send">Send</string>
    <string name="counts">Counts</string>
    <string name="sale_commission">Sale commission</string>
    <string name="reply">Reply</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="tik_tok">Tik Tok</string>
    <string name="collection_chooser_publish">Post to shared feed</string>
    <string name="collection_chooser_save">Save without publishing</string>
    <string name="collection_chooser_just_save">Save</string>
    <string name="collection_chooser_buy">Buy this look</string>
    <string name="detail_chooser_size_table">SIZE TABLE</string>
    <string name="detail_chooser_counts_table">COUNTS TABLE</string>
    <string name="detail_chooser_color_table">COLOR TABLE</string>
    <string name="detail_chooser_ready">DONE</string>
    <string name="photo_chooser_add_item_by_barcode">Add item by barcode</string>
    <string name="photo_chooser_add_item_by_photo">Add item by photo</string>
    <string name="photo_chooser_publish_in_outfit">Post a photo in an outfit</string>
    <string name="my_basket">My basket</string>
    <string name="empty_basket_title">Your basket is empty</string>
    <string name="empty_basket_subtitle">Add items to show up in your shopping cart</string>
    <string name="collection_add_text">Добавить надпись</string>
    <string name="collection_accept_cancel_items">Отметить вещи</string>
    <string name="collection_accept_cancel_users">Отметить пользователя</string>
    <string name="collection_accept_publish_social_networks">Публикация в соц сетях</string>
    <string name="edit_profile_change_photo">Change profile photo</string>
    <string name="profile_name">Name</string>
    <string name="profile_username">Username</string>
    <string name="profile_web_site">Web site</string>
    <string name="profile_desc">Description</string>
    <string name="profile_add_desc">Add information about yourself</string>
    <string name="profile_add_instagram">Add link on instagram</string>
    <string name="filter_constructor_filter">Filter</string>
    <string name="filter_constructor_show_results">Show Results</string>
    <string name="address_profile_title">The address book</string>
    <string name="address_profile_empty">You do not have a shipping address. Add an address.</string>
    <string name="address_profile_add">Add an address</string>
    <string name="address_profile_contact">Contact Information</string>
    <string name="address_profile_mobile_phone">Mobile phone</string>
    <string name="address_profile_address_data">Address data</string>
    <string name="address_profile_prefer_address">Preferred shipping address</string>
    <string name="address_profile_default_score">Default billing address</string>
    <string name="address_profile_deleted">Shipping address removed</string>
    <string name="address_profile_set_default">Set as default shipping address</string>
    <string name="card_empty">У вас отсутствуют сохраненные способы оплаты. Добавьте карту</string>
    <string name="card_add">Добавить Кредитную/Дебетовую Карту</string>
    <string name="card_number">Номер Карты</string>
    <string name="card_last_date">Дата истечения срока действия карты</string>
    <string name="card_name">Имя на карте</string>
    <string name="card_we_accept">Мы принимаем</string>
    <string name="card_save">Сохранить карту</string>
    <string name="card_prefer_payment">Предпочитаемый способ оплаты</string>
    <string name="clean_background_clean_text">Remove background</string>
    <string name="clean_background_add_wardrobe">Добавить в мой гардероб</string>
    <string name="collection_constructor_create_title">Создайте свой образ</string>
    <string name="collection_constructor_create_subtitle">Чтобы выбрать понравившуюся вещь,\nкликните на нее 2 раза</string>
    <string name="dialog_exit_title">You definitely want to log out of your %s account?</string>
    <string name="dialog_exit_positive_text">Exit</string>
    <string name="dialog_exit_cancel_text">Cancel</string>
    <string name="personal_settings_invite">Share</string>
    <string name="personal_settings_invite_friends">Invite your friends</string>
    <string name="personal_settings_account">Accounts</string>
    <string name="personal_settings_support">Support service</string>
    <string name="personal_settings_tell_problem">Report an issue</string>
    <string name="personal_settings_notification">Notification</string>
    <string name="personal_settings_push_notification">Push Notification</string>
    <string name="collection_context_delete">Delete</string>
    <string name="collection_context_complain">Complain</string>
    <string name="collection_context_change">Change</string>
    <string name="collection_context_share">Share</string>
    <string name="collection_context_cancel">Cancel</string>
    <string name="send_problem_title">Report issue</string>
    <string name="send_problem_spam">Spam</string>
    <string name="send_problem_something_went_wrong">Something went wrong</string>
    <string name="delivery_fitting_info">Дорогие клиенты, оповещаем вас что время примерки на одну вещь составляет не более %s.</string>
    <string name="delivery_date_info">Дата доставки: %s</string>
    <string name="with_fitting">С примеркой</string>
    <string name="choice">Выбрать</string>
</resources>