<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/bottom_nav_bar_main"
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_home"/>
    <item android:title="@string/bottom_nav_bar_collection"
        android:id="@+id/collectionsFragment"
        android:icon="@drawable/ic_collection"/>
    <item android:title="@string/bottom_nav_bar_create_collection"
        android:id="@+id/createCollectionFragment"
        android:icon="@drawable/ic_create_collection"/>
    <item android:title="@string/bottom_nav_bar_shop"
        android:id="@+id/shopFragment"
        android:icon="@drawable/ic_search"/>
    <item android:title="@string/bottom_nav_bar_profile"
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"/>
</menu>