<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_size_16x"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_dialog"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/dialog_bottom_collection_context_delete_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_size_16x"
            android:text="@string/collection_context_delete"
            android:textColor="@color/app_red"
            android:textSize="@dimen/text_size_14x"
            android:textStyle="bold"
            />

        <View
            android:id="@+id/dialog_bottom_collection_context_divider_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/little_divider_height"
            android:background="@color/divider_bg_color"
            />

        <TextView
            android:id="@+id/dialog_bottom_collection_context_share_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_size_16x"
            android:text="@string/collection_context_share"
            android:textColor="@color/app_dark_blue_gray"
            android:textSize="@dimen/text_size_14x"
            android:textStyle="bold"
            />

        <View
            android:id="@+id/dialog_bottom_collection_context_divider_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/little_divider_height"
            android:background="@color/divider_bg_color"
            />

        <TextView
            android:id="@+id/dialog_bottom_collection_context_change_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_size_16x"
            android:text="@string/collection_context_change"
            android:textColor="@color/app_dark_blue_gray"
            android:textSize="@dimen/text_size_14x"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/little_divider_height"
            android:background="@color/divider_bg_color"
            />

        <TextView
            android:id="@+id/dialog_bottom_collection_context_support_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_size_16x"
            android:text="@string/collection_context_complain"
            android:textColor="@color/app_dark_blue_gray"
            android:textSize="@dimen/text_size_14x"
            android:textStyle="bold"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_16x"
        android:layout_marginBottom="@dimen/margin_size_24x"
        android:background="@drawable/bg_rounded_dialog"
        >

        <TextView
            android:id="@+id/dialog_bottom_collection_cancel_archive_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_size_16x"
            android:text="@string/collection_context_cancel"
            android:textColor="@color/app_red"
            android:textSize="@dimen/text_size_14x"
            android:textStyle="bold"
            />
    </FrameLayout>

</LinearLayout>