<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_size_16x"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_dialog"
        android:orientation="vertical"
        >

        <TextView
            style="@style/TitleTextBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_size_16x"
            android:text="@string/send_problem_title"
            android:textColor="@color/app_dark_blue_gray"
            android:textSize="@dimen/text_size_14x"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/little_divider_height"
            android:background="@color/divider_bg_color"
            />

        <TextView
            android:id="@+id/dialog_report_problem_spam_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_size_16x"
            android:text="@string/send_problem_spam"
            android:textColor="@color/app_red"
            android:textSize="@dimen/text_size_14x"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/little_divider_height"
            android:background="@color/divider_bg_color"
            />

        <TextView
            android:id="@+id/dialog_report_problem_something_wrong_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_size_16x"
            android:text="@string/send_problem_something_went_wrong"
            android:textColor="@color/app_dark_blue_gray"
            android:textSize="@dimen/text_size_14x"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/little_divider_height"
            android:background="@color/divider_bg_color"
            />

        <TextView
            android:id="@+id/dialog_report_problem_share_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_size_16x"
            android:text="@string/collection_context_share"
            android:textColor="@color/app_dark_blue_gray"
            android:textSize="@dimen/text_size_14x"
            android:textStyle="bold"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_16x"
        android:layout_marginBottom="@dimen/margin_size_24x"
        android:background="@drawable/bg_rounded_dialog"
        >

        <TextView
            android:id="@+id/dialog_report_problem_cancel_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_size_16x"
            android:text="@string/collection_context_cancel"
            android:textColor="@color/app_blue"
            android:textSize="@dimen/text_size_14x"
            android:textStyle="bold"
            />
    </FrameLayout>

</LinearLayout>