<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_size_16x"
    android:background="@drawable/bg_rounded_dialog"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/dialog_exit_warn_title"
        style="@style/Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_size_64x"
        android:layout_marginVertical="@dimen/margin_size_20x"
        android:text="@string/dialog_exit_title"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_16x"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/little_divider_height"
        android:background="@color/divider_bg_color"
        />

    <TextView
        android:id="@+id/dialog_exit_positive_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/padding_size_48x"
        android:paddingVertical="@dimen/padding_size_20x"
        android:text="@string/dialog_exit_positive_text"
        android:textAlignment="center"
        android:textColor="@color/app_red"
        android:textSize="@dimen/text_size_14x"
        android:textStyle="bold"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/little_divider_height"
        android:background="@color/divider_bg_color"
        />

    <TextView
        android:id="@+id/dialog_exit_cancel_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/padding_size_48x"
        android:paddingVertical="@dimen/padding_size_20x"
        android:text="@string/dialog_exit_cancel_text"
        android:textAlignment="center"
        android:textColor="@color/app_dark_blue_gray"
        android:textSize="@dimen/text_size_14x"
        android:textStyle="bold"
        />

</LinearLayout>